# Szachy

./: CMakeLists.txt  main.c
